fixed certificate responsive for desktop > remove wizard.tsx 's levelOption's about button's ' ! ' on smallWidth

--- a/components/wizard/LevelOption.module.scss
+++ b/components/wizard/LevelOption.module.scss
@@ -200,7 +200,7 @@
     background-position: center center;
     background-repeat: no-repeat;
     background-size: 1rem;
-    background-image: url('../../public/assets/images/info.png');
+    // background-image: url('../../public/assets/images/info.png');
     padding: 0 0.4rem;
   }
 }
