--- a/pages/certificate.module.scss
+++ b/pages/certificate.module.scss
@@ -9,9 +9,10 @@
   text-transform: uppercase;
   margin-bottom: 1rem;
 }
+
+
+
 .certificateWrapper{
-  
-  
   .downloadButton {
     position: absolute;
     top: 0rem;
@@ -97,7 +98,7 @@
         color: #683398;
 
         img {
-          max-width: 18%;
+          width: 18%;
           height: 35%;
           left: 3%;
           position: absolute;
